# Simple-registration-system

./: .gitignore  Makefile  README.md  commands.cpp  commands.h  data_manip.cpp  data_manip.h  database_manip.h  main.cpp  program.cpp  server.cpp  sqlite3.exp  sqlite3.lib  user.cpp
client/: client.cpp  client.h  commands.cpp  main.cpp  program.h  user.h
data_structures/: HashTable.cpp  HashTable.h
database/: data_manip.cpp  database.cpp  database.h  database_manip.cpp  database_manip.h
errors/: errors.cpp  errors.h
server/: server.cpp  server.h
sqlite/: sqlite3.lib
tests/: CMakeLists.txt  Database_test.cpp  HashTable_test.cpp  data_manip_tests.cpp  hello_test.cpp
